added room constraints & unique index, added search filters